--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             <div cellIndex="7" class="cell"></div>
             <div cellIndex="8" class="cell"></div>
         </div>
-
+        <!--new feature 1 -->
+        <!--new feature 2 -->
     <script src="/script.js"></script>
     </body>
 
